<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDark"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/bg_curve_white"
        android:padding="7dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:fontFamily="@font/os_medium"
        android:paddingTop="30dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_margin="30dp"
        android:fontFamily="@font/os_light"
        android:text="@string/app_message"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/access"
        style="@style/Theme.Call4Help.Button.White"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="75dp"
        android:text="@string/access" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/os_light"
        android:text="@string/hackathon"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp" />

</RelativeLayout>