<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingStart="15dp"
    android:paddingTop="15dp"
    android:paddingEnd="15dp"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="7dp"
        android:src="@drawable/ic_back" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/back"
        android:background="@drawable/bg_curve_white"
        android:padding="7dp"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/curve_light"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:textColor="@color/primaryDark"
            android:paddingBottom="5dp"
            android:text="@string/add_alert"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/controls"
        android:layout_below="@+id/logo"
        android:layout_marginTop="15dp"
        android:background="@drawable/bc_almost_curve_white"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/gray"
            android:clickable="true"
            android:focusable="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="3" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/tags">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/objects">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/objects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TableRow
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="5dp"
        android:weightSum="100">

        <Button
            android:id="@+id/cancel"
            style="@style/Theme.Call4Help.Button.Cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="50"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/save"
            style="@style/Theme.Call4Help.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="50"
            android:text="@string/save" />

    </TableRow>


</RelativeLayout>